--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </ul>
       </nav>
       <h1 class="title page-title">no focus</h1>
-      <p class="header__text title title-decor">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться,
-        особенно когда очень надо</p>
+      <p class="header__text title title-decor">Что делать, когда не можешь делать ничего <br>
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </header>
     <main class="main">
       <section class="section section-why">
@@ -50,7 +50,8 @@
               <h3 class="title title-decor">Многозадачность</h3>
               <p class="section__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность,
                 когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
-                Исследователи <a class="link" href="" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно.
+                Исследователи
+                <a class="link" href="#0" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно.
                 А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин
                 — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
             </article>
@@ -100,7 +101,7 @@
           </li>
         </ul>
       </section>
-      <section class="section section-what">
+      <section class="section">
         <h2 class="title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <ul>
           <li class="section__list-item">
@@ -127,8 +128,9 @@
           <li class="section__list-item">
             <article>
               <h4 class="title-decor text-regular">Прогуляйтесь</h4>
-              <p class="section__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link" href="" target="_blank">
-                показал</a>, что созерцание природы повышает
+              <p class="section__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a class="link" href="#0" target="_blank">
+                  показал</a>, что созерцание природы повышает
                 концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить
                 прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
                 работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
@@ -156,54 +158,44 @@
         <h2 class="title title-decor">А можно в картинках?</h2>
         <ul class="gallery__list">
           <li class="gallery__list-item">
-            <picture>
-              <img
-                class="gallery__list-item-img"
-                src="./images/sunset.png"
-                alt="Представьте небо и облака"
-                loading="lazy"
-              />
-            </picture>
+            <img
+              class="gallery__list-item-img"
+              src="./images/sunset.png"
+              alt="Представьте небо и облака"
+              loading="lazy"
+            />
           </li>
           <li class="gallery__list-item">
-            <picture>
-              <img
-                class="gallery__list-item-img"
-                src="./images/ice-cream.png"
-                alt="Хорошо ешьте"
-                loading="lazy"
-              />
-            </picture>
+            <img
+              class="gallery__list-item-img"
+              src="./images/ice-cream.png"
+              alt="Хорошо ешьте"
+              loading="lazy"
+            />
           </li>
           <li class="gallery__list-item">
-            <picture>
-              <img
-                class="gallery__list-item-img"
-                src="./images/tape.png"
-                alt="Включите музыку"
-                loading="lazy"
-              />
-            </picture>
+            <img
+              class="gallery__list-item-img"
+              src="./images/tape.png"
+              alt="Включите музыку"
+              loading="lazy"
+            />
           </li>
           <li class="gallery__list-item">
-            <picture>
-              <img
-                class="gallery__list-item-img"
-                src="./images/books.png"
-                alt="Читайте"
-                loading="lazy"
-              />
-            </picture>
+            <img
+              class="gallery__list-item-img"
+              src="./images/books.png"
+              alt="Читайте"
+              loading="lazy"
+            />
           </li>
           <li class="gallery__list-item">
-            <picture>
-              <img
-                class="gallery__list-item-img"
-                src="./images/street.png"
-                alt="Прогуляйтесь"
-                loading="lazy"
-              />
-            </picture>
+            <img
+              class="gallery__list-item-img"
+              src="./images/street.png"
+              alt="Прогуляйтесь"
+              loading="lazy"
+            />
           </li>
         </ul>
       </section>
